Bug 58844 - [swrast] piglit fbo-generatemipmap-formats-signed regression
Summary: [swrast] piglit fbo-generatemipmap-formats-signed regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-28 23:54 UTC by Vinson Lee
Modified: 2013-01-02 16:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-12-28 23:54:52 UTC
mesa: 2f225f61451abd51c283c7ff103d7fd50a935034 (master)

Run piglit fbo-generatemipmap-formats-signed on swrast.

$ ./bin/fbo-generatemipmap-formats GL_EXT_texture_compression_latc-signed -auto
Using test set: GL_EXT_texture_compression_latc-signed
Testing GL_COMPRESSED_SIGNED_LUMINANCE_LATC1_EXT
Probe at (129,1)
  Expected: 0.000000 0.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 1.000000 1.000000
Testing GL_COMPRESSED_SIGNED_LUMINANCE_ALPHA_LATC2_EXT
Testing GL_COMPRESSED_SIGNED_LUMINANCE_LATC1_EXT (NPOT)
Probe at (151,1)
  Expected: 0.000000 0.000000 0.000000 1.000000
  Observed: 1.000000 1.000000 1.000000 1.000000
Testing GL_COMPRESSED_SIGNED_LUMINANCE_ALPHA_LATC2_EXT (NPOT)
PIGLIT: {'result': 'fail' }

7dc36a50de516d95fc6edc58cf1ab5cd7129e95a is the first bad commit
commit 7dc36a50de516d95fc6edc58cf1ab5cd7129e95a
Author: Brian Paul <brianp@vmware.com>
Date:   Sat Dec 8 15:19:44 2012 -0700

    swrast: use new core Mesa compressed texel fetch functions

:040000 040000 0405f735572be3a6db5629481683197ad8e8d0a8 d7a74fc7a39f46c45fbe4f6d128237167947f37a M	src
bisect run success
Comment 1 Brian Paul 2013-01-02 16:02:52 UTC
Fixed by commit c7d3254b8e0bb0859c4ed969f07b4585af5577b7


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.